--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
     <!-- Main Content -->
 
     <div class="container mx-auto px-12 py-12" id="content">
-        <form id="search-form" class="mb-8">
+        <form id="search-form" class="mb-8 flex flex-col sm:flex-row sm:items-center">
             <input type="text" id="search-input"
-                class="flex-grow rounded-md px-4 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                class="flex-grow rounded-md px-4 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2 sm:mb-0 sm:mr-2"
                 placeholder="Cari Lokasi...">
             <button type="submit"
-                class="ml-2 bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700">Search</button>
+                class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-700 w-full sm:w-auto">Search</button>
         </form>
 
         <section class="mb-8">
