--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     class="text-base-500 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">About
                     Us</a>
                 <a href="#content"
-                    class="text-base-500 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Divisi</a>
+                    class="text-base-500 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Traffic</a>
             </div>
         </div>
     </nav>
